# TRACIS

./: .dockerignore  .gitignore  CMakeLists.txt  INSTALL  LICENSES  README.md  TODO  runcase.sh
Docker/: Dockerfile  docker-build.sh  docker-setup-dev-container.sh
tools/: CMakeLists.txt
tools/tiiGcrDetector/: CMakeLists.txt  indexing.h  main.c
tools/tracis/: CMakeLists.txt  cdf_attrs.c  cdf_attrs.h  cdf_vars.c  cdf_vars.h  export_products.c  export_products.h  image_analysis.c  image_analysis.h  interpolate.c  interpolate.h  load_inputs.c  load_inputs.h  load_satellite_velocity.c  load_satellite_velocity.h  parallel_process_tracis.sh  process_tracis.sh  tracis.c  tracis.h  tracis_flags.h  tracis_settings.h  utilities.c  utilities.h
tools/tracisParallel/: CMakeLists.txt  main.c
